// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test of <List /> View when data array is empty 1`] = `
<div
  className="table-responsive"
>
  <table
    className="table table-dark"
  >
    <thead>
      <tr>
        <th>
          List is empty
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`Test of <List /> View when data array is loading 1`] = `
<div
  className="table-responsive"
>
  <table
    className="table table-dark"
  >
    <thead>
      <tr>
        <th>
          Loading...
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`Test of <List /> View when in data array 2 items 1`] = `
<div
  className="table-responsive"
>
  <table
    className="table table-dark"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Rating
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          style={
            Object {
              "wordWrap": "break-word",
            }
          }
        >
          Petrovich
        </td>
        <td
          style={
            Object {
              "wordWrap": "break-word",
            }
          }
        >
          5
        </td>
        <td
          className="text-center"
        >
          <div
            className="dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              className="btn btn-secondary dropdown-toggle"
              data-toggle="dropdown"
              id="dropdownMenuButton"
              type="button"
            >
              Options
            </button>
            <div
              aria-labelledby="dropdownMenuLink"
              className="dropdown-menu"
            >
              <button
                className="dropdown-item deleteItemBtn"
                onClick={[Function]}
              >
                Delete
              </button>
              <a
                className="dropdown-item"
                href="/1"
                onClick={[Function]}
              >
                Edit
              </a>
              <button
                className="dropdown-item"
                data-target="#fullInfoModal"
                data-toggle="modal"
                onClick={[Function]}
                type="button"
              >
                Show full info
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td
          style={
            Object {
              "wordWrap": "break-word",
            }
          }
        >
          Alexeevich
        </td>
        <td
          style={
            Object {
              "wordWrap": "break-word",
            }
          }
        >
          5
        </td>
        <td
          className="text-center"
        >
          <div
            className="dropdown"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              className="btn btn-secondary dropdown-toggle"
              data-toggle="dropdown"
              id="dropdownMenuButton"
              type="button"
            >
              Options
            </button>
            <div
              aria-labelledby="dropdownMenuLink"
              className="dropdown-menu"
            >
              <button
                className="dropdown-item deleteItemBtn"
                onClick={[Function]}
              >
                Delete
              </button>
              <a
                className="dropdown-item"
                href="/2"
                onClick={[Function]}
              >
                Edit
              </a>
              <button
                className="dropdown-item"
                data-target="#fullInfoModal"
                data-toggle="modal"
                onClick={[Function]}
                type="button"
              >
                Show full info
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
